--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,1 +1,201 @@
+ul {
+    margin: 0;
+    padding: 0;
+}
 
+/* Style the list items */
+ul li {
+    position: relative;
+    padding: 12px 8px 12px 40px;
+    background: #eee;
+    font-size: 18px;
+}
+
+/* Set all odd list items to a different color (zebra-stripes) */
+ul li:nth-child(odd) {
+    background: #f9f9f9;
+}
+
+/* Darker background-color on hover */
+ul li:hover {
+    background: #ddd;
+}
+
+/* When clicked on, add a background color and strike out text */
+ul li.done {
+    background: #888;
+    color: #fff;
+}
+
+ul li.done .todo-label {
+    text-decoration: line-through;
+}
+
+.title {
+    margin-bottom: 30px;
+    margin-top: 30px;
+    background: #f5f5f5;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.1);
+}
+.wrapper{
+    padding: 15px;
+    min-height: 580px;
+}
+.panel {
+    background: #e2e4e6;
+    padding: 10px;
+    min-height: 580px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: 0 1px 1px rgba(0,0,0,.05)
+}
+.panel-heading {
+    color: #333;
+    border-color: #ddd;
+        padding:0 15px;
+    border-bottom: 1px solid transparent;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+}
+.panel-title{
+    margin: 0;
+    margin-top: 5px;
+}
+.panel-body{
+        margin-top: 15px;
+    background: aliceblue;
+    height: -webkit-fill-available;
+    padding: 15px;
+}
+.actions {
+    margin-top: 3px
+}
+.compose-box{
+    background-color: #fff;
+    border-radius: 3px;
+    box-shadow: 0 1px 0 #ccc;
+    cursor: pointer;
+    display: block;
+    margin-bottom: 8px;
+    max-width: 300px;
+    min-height: 20px;
+    position: relative;
+    text-decoration: none;
+    z-index: 0;
+}
+.card-details{
+        overflow: hidden;
+    padding: 6px 8px 2px;
+    position: relative;
+    z-index: 10;
+}
+.card-textbox{
+        overflow: hidden;
+    word-wrap: break-word;
+    height: 40px;
+    background: none;
+    border: none;
+    box-shadow: none;
+    height: auto;
+    margin-bottom: 4px;
+    max-height: 162px;
+    width: 100%;
+    min-height: 54px;
+    overflow-y: auto;
+    padding: 0;
+    outline: none;
+}
+input[type="checkbox"] {
+    width: 20px;
+    vertical-align: middle;
+    margin-right: 20px;
+    height: 20px;
+}
+/* Style the close button */
+.btn-box {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 12px 16px 12px 16px;
+}
+
+/* Style the header */
+.header {
+    background-color: #f3f3f3;
+    padding: 20px 40px;
+    color: #000;
+    text-align: center;
+}
+
+.add-content {
+    margin: 20px 0;
+    text-align: center;
+}
+
+.list-title {
+    background-color: darkseagreen;
+    padding: 20px 40px;
+    color: #000;
+    text-align: center;
+}
+/* Style the input */
+.add-text {
+    outline: none;
+    width: 300px;
+    padding: 10px;
+    font-size: 16px; 
+}
+.li-item {
+    margin-bottom: 10px;
+}
+
+.card-edit {
+    outline: none;
+    width: 100px;
+    padding: 2px;
+    font-size: 14px;
+}
+[draggable] {
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+  /* Required to make elements draggable in old WebKit */
+  -khtml-user-drag: element;
+  -webkit-user-drag: element;
+}
+.btn-addcard {
+    padding: 12px;
+    width: 100px;
+    border: none;
+    margin-left: 10px;
+    background: green;
+    color: #fff;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+}
+.btn-action {
+   font-size: 13px;
+    margin: 0;
+    padding: 0;
+    background: no-repeat; 
+    outline: none;
+    border: 0; 
+}
+
+
+.btn-addcard:hover {
+    background-color: darkgreen;
+}
+.hide {
+    display: none;
+}
+.show {
+    display: inline-block;
+}
+li {
+    list-style: none;
+    padding: 15px !important;
+}
